<resources>
    <string name="app_name">Challange3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_1">SCREEN 1</string>
    <string name="go_to_screen_2">GO TO SCREEN 2</string>
    <string name="screen_2">SCREEN 2</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="go_to_screen_3">GO TO SCREEN 3</string>
    <string name="go_to_screen_4">GO TO SCREEN 4</string>
    <string name="pekerjaan">PEKERJAAN</string>
    <string name="alamat">ALAMAT</string>
    <string name="usia">USIA</string>
    <string name="nama">NAMA</string>
    <string name="screen_3">SCREEN 3</string>
    <string name="back_to_screen_3">BACK TO SCREEN 3</string>
    <string name="masukkan_pekerjaan">Masukkan Pekerjaan</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_usia">Masukkan Usia</string>
    <string name="screen_4">SCREEN 4</string>
</resources>