<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_3"
        android:id="@+id/scres"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/nama"
        android:layout_marginTop="140dp"
        android:layout_below="@id/scres"
        android:id="@+id/txtNama"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/txtUsia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNama"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:text="@string/usia"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"

        android:text="@string/alamat"
        android:id="@+id/txtAlamat"
        android:layout_centerInParent="true"
        android:layout_below="@id/txtUsia"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/pekerjaan"
        android:visibility="gone"

        android:id="@+id/txtPekerjaan"
        android:layout_below="@id/txtAlamat"
        android:layout_centerInParent="true"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/txtPekerjaan"
        android:id="@+id/goto4"
        android:text="@string/go_to_screen_4"/>



</RelativeLayout>